crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_union_sugar_nested.stderr
error: def_node_matcher!: pattern parse error: `$` capture is not allowed inside `{}` / `!` / `` ` `` (the body has no definite-assignment path) (at 6..12)
 --> tests/ui/fail_node_pattern_capture_union_sugar_nested.rs:4:44
  |
4 | murphy_plugin_macros::def_node_matcher!(m, "${int $float}");
  |                                            ^^^^^^^^^^^^^^^
