crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_union_sugar_nested.rs
// def_node_matcher! must reject `${int $float}` — the sugar body of the second
// arm is itself a `$` capture, which would create a nested unwritten slot.

murphy_plugin_macros::def_node_matcher!(m, "${int $float}");

fn main() {}
